app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hw5-virtualservice
  namespace: hw5
spec:
  hosts:
  - "*"
  gateways:
    - hw5-gateway
  http:
  - route:
    - destination:
        subset: v1
        host: hw5-service
        port:
          number: 80
      weight: 50
    - destination:
        subset: v2
        host: hw5-service
        port:
          number: 80
      weight: 50
